--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "dominic/fpm-guzzle-proxy",
     "description": "PoC of Guzzle proxy misconfiguration",
     "require": {
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "6.2.0"
     },
     "authors": [
         {
